--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.link{
+  cursor: pointer;
+}
+
+.link:hover {
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+  border-bottom: 2px solid rgb(196, 196, 196);
+}
+
+.box {
+  border-radius: 10%;
+  background-color: rgb(236, 236, 236);
+  padding: 30px;
+  text-align: center;
+}
+
+.box:hover {
+  background-color: rgb(216, 216, 216);
 }
